deployment\k8s\service_personalization.yaml
apiVersion: v1
kind: Service
metadata:
  name: personalization-service
  namespace: fortis
  labels:
    app: personalization
    service: personalization
spec:
  type: ClusterIP
  selector:
    app: personalization
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
