deployment\k8s\service_smart_search.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-search-service
  namespace: fortis
  labels:
    app: smart-search
    service: smart-search
spec:
  type: ClusterIP
  selector:
    app: smart-search
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
